[gd_scene load_steps=7 format=3 uid="uid://b4q7v1n1u370q"]

[ext_resource type="Script" uid="uid://6dhulyc34mgl" path="res://game/slot.gd" id="1_8jju3"]
[ext_resource type="Theme" uid="uid://djg8cvd887cqj" path="res://assets/theme/creature_selector_theme.tres" id="1_mabo7"]
[ext_resource type="Texture2D" uid="uid://5t4ole0i0o0s" path="res://assets/img/ui/pointer.png" id="2_8jju3"]

[sub_resource type="Animation" id="Animation_y36n6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pointer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -18)]
}

[sub_resource type="Animation" id="Animation_u5opy"]
resource_name = "loop"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pointer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(0, -18), Vector2(0, -22)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y36n6"]
_data = {
&"RESET": SubResource("Animation_y36n6"),
&"loop": SubResource("Animation_u5opy")
}

[node name="Slot" type="Marker2D"]
script = ExtResource("1_8jju3")
index = null

[node name="Button" type="Button" parent="."]
unique_name_in_owner = true
offset_left = -8.0
offset_top = -20.0
offset_right = 8.0
offset_bottom = 16.0
focus_mode = 0
theme = ExtResource("1_mabo7")

[node name="Pointer" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -18)
texture = ExtResource("2_8jju3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Pointer"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_y36n6")
}
autoplay = "loop"

[node name="ActorContainer" type="Node2D" parent="."]
unique_name_in_owner = true

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
